fix margins on small displays

--- a/src/sass/home.sass
+++ b/src/sass/home.sass
@@ -16,6 +16,10 @@
   align-items: center
   justify-content: center
 
+@media (max-width: 810px)
+  .login-container
+    margin: 0 auto
+
 #logo-container
   justify-content: space-evenly
 
